@@ -2,7 +2,6 @@ import org.springframework.boot.gradle.plugin.SpringBootPlugin
 
 plugins {
   id("java-library")
-  id("jacoco")
   alias(libs.plugins.spring.boot) apply false
 }
 
@@ -22,38 +21,3 @@ dependencies {
   testImplementation(libs.bundles.mockito)
   testImplementation(libs.bundles.spring.test)
 }
-
-tasks.test {
-  jvmArgs("-XX:+EnableDynamicAgentLoading")
-  useJUnitPlatform()
-  finalizedBy("jacocoTestReport")
-}
-
-tasks.jacocoTestReport {
-  reports {
-    xml.required.set(true)
-  }
-}
-
-val cucumberRuntime by getConfigurations().creating {
-  extendsFrom(configurations["testImplementation"])
-}
-
-tasks.register("cucumberCli") {
-  group = JavaBasePlugin.VERIFICATION_GROUP
-  description = "Runs Cucumber Feature Files"
-  dependsOn("assemble", "testClasses")
-  doLast {
-    providers.javaexec {
-      mainClass.set("io.cucumber.core.cli.Main")
-      classpath = cucumberRuntime + sourceSets.main.get().output + sourceSets.test.get().output
-      args = listOf(
-        "--plugin", "pretty",
-        "--plugin", "html:build/reports/cucumber/cucumber-report.html",
-        "--glue", "org.endeavourhealth.pipeline.inbound",
-        "src/test/resources"
-      )
-    }
-  }
-}
-
